converted some to fish

--- a/autostart/lxrandr-autostart.desktop
+++ b/autostart/lxrandr-autostart.desktop
@@ -2,5 +2,5 @@
 Type=Application
 Name=LXRandR autostart
 Comment=Start xrandr with settings done in LXRandR
-Exec=bash /home/jordan/Scripts/set_screens.sh
+Exec=fish /home/jordan/Scripts/set_screens.fish
 OnlyShowIn=LXDE
