--- a/pragha/config
+++ b/pragha/config
@@ -24,6 +24,7 @@ playlist_column_widths=310;310;310;715;
 shuffle=true
 repeat=true
 save_playlist=true
+current_ref=1
 
 [General]
 installed_version=1.3.4
