--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,10 @@ pcmanfm/
 pragha/
 pulse/
 qtile/__pycache__/
-qutebrowser/
 smplayer/
 tuta_integration/
 tutanota-desktop/
 vifm/
+tidal-hifi/
+xfce4/
+qutebrowser/dracula
