--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -6,13 +6,7 @@
 
 config_version: 2
 settings:
-  content.notifications:
-    https://www.reddit.com: false
-  fonts.default_size:
-    global: 22pt
-  statusbar.show:
-    global: never
+  content.user_stylesheets:
+    global: ~/solarized-everything-css/css/solarized-dark/solarized-dark-all-sites.css
   tabs.show:
     global: always
-  zoom.default:
-    global: 150%
