updated paru filemanager

--- a/paru/paru.conf
+++ b/paru/paru.conf
@@ -15,7 +15,7 @@ Provides
 DevelSuffixes = -git -cvs -svn -bzr -darcs -always
 BottomUp
 RemoveMake
-SudoLoop
+# SudoLoop
 PacmanConf = /etc/pacman.conf
 #UseAsk
 #CombinedUpgrade
@@ -31,7 +31,7 @@ PacmanConf = /etc/pacman.conf
 # Binary OPTIONS
 #
 [bin]
-FileManager = ranger
+FileManager = nvim
 #MFlags = --skippgpcheck
 Sudo = doas
 Pacman = pacman
