sorted paru settings

--- a/paru/paru.conf
+++ b/paru/paru.conf
@@ -15,7 +15,7 @@ Provides
 DevelSuffixes = -git -cvs -svn -bzr -darcs -always
 BottomUp
 RemoveMake
-# SudoLoop
+SudoLoop = true
 PacmanConf = /etc/pacman.conf
 #UseAsk
 #CombinedUpgrade
