--- a/transmission-daemon/settings.json
+++ b/transmission-daemon/settings.json
@@ -12,7 +12,7 @@
     "blocklist-url": "http://www.example.com/blocklist",
     "cache-size-mb": 4,
     "dht-enabled": true,
-    "download-dir": "/home/jordan/kvmISOs/",
+    "download-dir": "/home/jordan/Downloads/",
     "download-queue-enabled": true,
     "download-queue-size": 5,
     "encryption": 1,
