--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,51 @@ Slack/
 qpicospeaker/
 bat/
 Signal/
+BraveSoftware/Brave-Browser/Default/Favicons
+BraveSoftware/Brave-Browser/Default/GCM Store/Encryption/LOG
+BraveSoftware/Brave-Browser/Default/GCM Store/Encryption/LOG.old
+BraveSoftware/Brave-Browser/Default/GPUCache/data_1
+BraveSoftware/Brave-Browser/Default/GPUCache/index
+BraveSoftware/Brave-Browser/Default/History
+BraveSoftware/Brave-Browser/Default/Local Storage/leveldb/LOG
+BraveSoftware/Brave-Browser/Default/Local Storage/leveldb/LOG.old
+BraveSoftware/Brave-Browser/Default/Network Action Predictor
+BraveSoftware/Brave-Browser/Default/Platform Notifications/LOG
+BraveSoftware/Brave-Browser/Default/Platform Notifications/LOG.old
+BraveSoftware/Brave-Browser/Default/Service Worker/Database/000003.log
+BraveSoftware/Brave-Browser/Default/Service Worker/Database/LOG
+BraveSoftware/Brave-Browser/Default/Service Worker/Database/LOG.old
+BraveSoftware/Brave-Browser/Default/Session Storage/000003.log
+BraveSoftware/Brave-Browser/Default/Session Storage/LOG
+BraveSoftware/Brave-Browser/Default/Session Storage/LOG.old
+BraveSoftware/Brave-Browser/Default/Sessions/Session_13266091590649161
+BraveSoftware/Brave-Browser/Default/Sessions/Tabs_13266091734944776
+BraveSoftware/Brave-Browser/Default/Shortcuts
+BraveSoftware/Brave-Browser/Default/Site Characteristics Database/LOG
+BraveSoftware/Brave-Browser/Default/Sync Data/LevelDB/LOG
+BraveSoftware/Brave-Browser/Default/Sync Data/LevelDB/LOG.old
+BraveSoftware/Brave-Browser/Default/Sync Extension Settings/eimadpbcbfnmbkopoojfekhnkhdbieeh/LOG
+BraveSoftware/Brave-Browser/Default/data_reduction_proxy_leveldb/000013.log
+BraveSoftware/Brave-Browser/Default/data_reduction_proxy_leveldb/CURRENT
+BraveSoftware/Brave-Browser/Default/data_reduction_proxy_leveldb/LOG
+BraveSoftware/Brave-Browser/Default/data_reduction_proxy_leveldb/LOG.old
+BraveSoftware/Brave-Browser/Default/data_reduction_proxy_leveldb/MANIFEST-000012
+BraveSoftware/Brave-Browser/Default/shared_proto_db/000003.log
+BraveSoftware/Brave-Browser/Default/shared_proto_db/LOG
+BraveSoftware/Brave-Browser/Default/shared_proto_db/LOG.old
+BraveSoftware/Brave-Browser/Default/shared_proto_db/metadata/LOG
+BraveSoftware/Brave-Browser/Default/shared_proto_db/metadata/LOG.old
+BraveSoftware/Brave-Browser/GrShaderCache/GPUCache/data_1
+BraveSoftware/Brave-Browser/GrShaderCache/GPUCache/index
+BraveSoftware/Brave-Browser/Local State
+BraveSoftware/Brave-Browser/ShaderCache/GPUCache/index
+BraveSoftware/Brave-Browser/chrome_shutdown_ms.txt
+BraveSoftware/Brave-Browser/oofiananboodjbbmdelgdommihjbkfag/1.0.43/6.0/httpse.leveldb/000011.log
+BraveSoftware/Brave-Browser/oofiananboodjbbmdelgdommihjbkfag/1.0.43/6.0/httpse.leveldb/LOG
+BraveSoftware/Brave-Browser/oofiananboodjbbmdelgdommihjbkfag/1.0.43/6.0/httpse.leveldb/MANIFEST-000004
+BraveSoftware/Brave-Browser/CertificateRevocation/6620/
+BraveSoftware/Brave-Browser/Default/Sessions/Session_13266108138988352
+BraveSoftware/Brave-Browser/Default/Sessions/Tabs_13266108142338905
+BraveSoftware/Brave-Browser/Default/data_reduction_proxy_leveldb/000015.log
+BraveSoftware/Brave-Browser/Default/data_reduction_proxy_leveldb/MANIFEST-000014
+BraveSoftware/Brave-Browser/oofiananboodjbbmdelgdommihjbkfag/1.0.43/6.0/httpse.leveldb/000012.log
