--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,15 @@ BraveSoftware/Brave-Browser/Default/Sessions/Tabs_13266108142338905
 BraveSoftware/Brave-Browser/Default/data_reduction_proxy_leveldb/000015.log
 BraveSoftware/Brave-Browser/Default/data_reduction_proxy_leveldb/MANIFEST-000014
 BraveSoftware/Brave-Browser/oofiananboodjbbmdelgdommihjbkfag/1.0.43/6.0/httpse.leveldb/000012.log
+BraveSoftware/Brave-Browser/CertificateRevocation/6619/LICENSE
+BraveSoftware/Brave-Browser/CertificateRevocation/6619/_metadata/verified_contents.json
+BraveSoftware/Brave-Browser/CertificateRevocation/6619/crl-set
+BraveSoftware/Brave-Browser/CertificateRevocation/6619/manifest.fingerprint
+BraveSoftware/Brave-Browser/CertificateRevocation/6619/manifest.json
+"BraveSoftware/Brave-Browser/Default/Network Persistent State"
+BraveSoftware/Brave-Browser/Default/Sessions/Session_13266091656775837
+BraveSoftware/Brave-Browser/Default/Sessions/Session_13266110959437209
+BraveSoftware/Brave-Browser/Default/Sessions/Tabs_13266110962783397
+BraveSoftware/Brave-Browser/Default/data_reduction_proxy_leveldb/000017.log
+BraveSoftware/Brave-Browser/Default/data_reduction_proxy_leveldb/MANIFEST-000016
+BraveSoftware/Brave-Browser/oofiananboodjbbmdelgdommihjbkfag/1.0.43/6.0/httpse.leveldb/000013.log
