--- a/.gitignore
+++ b/.gitignore
@@ -3,53 +3,98 @@
 
 # Exceptions
 !.gitignore
-!alacritty/*
-!autostart/*
-!bash/*
-!colorscripts/*
-!dconf/*
-!dunst/*
-!dwm-6.2/*
-!efm-langserver/*
-!flameshot/*
-!gedit/*
-!gtk-3.0/*
-!htop/*
-!libfm/*
-!libreoffice/*
-!libvirt/*
-!lsd/*
+!alacritty/
+alacritty/*
+!autostart/
+autostart/*
+!bash/
+bash/*
+!colorscripts/
+colorscripts/*
+!dconf/
+dconf/*
+!dunst/
+dunst/*
+!dwm-6.2/
+dwm-6.2/*
+!efm-langserver/
+efm-langserver/*
+!flameshot/
+flameshot/*
+!gedit/
+gedit/*
+!gtk-3.0/
+gtk-3.0/*
+!htop/
+htop/*
+!libfm/
+libfm/*
+!libreoffice/
+libreoffice/*
+!libvirt/
+libvirt/*
+!lsd/
+lsd/*
 !lxtask.conf
-!mpv/*
-!nvim/*
-!paru/*
+!mpv/
+mpv/*
+!nvim/
+nvim/*
+!paru/
+paru/*
 !pavucontrol.ini
-!pcmanfm/*
-!picom/*
-!pulse/*
-!pulseaudio-ctl/*
-!qtile/*
-!qutebrowser/*
+!pcmanfm/
+pcmanfm/*
+!picom/
+picom/*
+!pulse/
+pulse/*
+!pulseaudio-ctl/
+pulseaudio-ctl/*
+!qtile/
+qtile/*
+!qutebrowser/
+qutebrowser/*
 !README.md
-!rofi/*
-!Slack/*
-!transmission-daemon/*
-!tutanota-desktop/*
-!vim/*
-!wallpapers/*
-!Xauthority/*
-!xinit/*
-!Xresources/*
-!yay/*
-!zsh/*
-!BraveSoftware/Brave-Browser/Default/Extension State/*
+!rofi/
+rofi/*
+!Slack/
+Slack/*
+!transmission-daemon/
+transmission-daemon/*
+!tutanota-desktop/
+tutanota-desktop/*
+!vim/
+vim/*
+!wallpapers/
+wallpapers/*
+!Xauthority/
+Xauthority/*
+!xinit/
+xinit/*
+!Xresources/
+Xresources/*
+!yay/
+yay/*
+!zsh/
+zsh/*
+!BraveSoftware/
+!BraveSoftware/Brave-Browser/
+!BraveSoftware/Brave-Browser/Default/
+!BraveSoftware/Brave-Browser/Default/Extension State/
+BraveSoftware/Brave-Browser/Default/Extension State/*
 !BraveSoftware/Brave-Browser/Default/Favicons
-!BraveSoftware/Brave-Browser/Default/Local Extension Settings/*
+!BraveSoftware/Brave-Browser/Default/Local Extension Settings/
+BraveSoftware/Brave-Browser/Default/Local Extension Settings/*
 !BraveSoftware/Brave-Browser/Default/Preferences
-!BraveSoftware/Brave-Browser/Default/Sync Extension Settings/*
+!BraveSoftware/Brave-Browser/Default/Sync Extension Settings/
+BraveSoftware/Brave-Browser/Default/Sync Extension Settings/*
 !BraveSoftware/Brave-Browser/Default/Bookmarks
 !BraveSoftware/Brave-Browser/Default/Bookmarks.bak
-!BraveSoftware/Brave-Browser/Default/Extensions/*
-!BraveSoftware/Brave-Browser/Default/Extension Rules/*
-!BraveSoftware/Brave-Browser/Default/Extension State/*
+!BraveSoftware/Brave-Browser/Default/Extensions/
+BraveSoftware/Brave-Browser/Default/Extensions/*
+!BraveSoftware/Brave-Browser/Default/Extension Rules/
+BraveSoftware/Brave-Browser/Default/Extension Rules/*
+!BraveSoftware/Brave-Browser/Default/Extension State/
+BraveSoftware/Brave-Browser/Default/Extension State/*
 !BraveSoftware/Brave-Browser/Default/Secure Preferences
