fixed nvim settings

--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -6,11 +6,7 @@
 
 config_version: 2
 settings:
-  content.media.audio_capture:
-    https://meet.google.com: true
-  content.media.audio_video_capture:
-    https://meet.google.com: true
-  content.media.video_capture:
-    https://meet.google.com: true
-  content.notifications.enabled:
-    https://meet.google.com: false
+  statusbar.show:
+    global: never
+  tabs.show:
+    global: never
