--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-BraveSoftware/Brave-Browser/*
+BraveSoftware/Brave-Browser/
 !BraveSoftware/Brave-Browser/Default/Extensions/
 !BraveSoftware/Brave-Browser/Default/Bookmarks
 !BraveSoftware/Brave-Browser/Default/Bookmarks.bak
-Slack/*
+Slack/
 !Slack/Preferences
 !Slack/local-settings.json
 qtile/__pycache__/
