--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-BraveSoftware/Brave-Browser/
-!BraveSoftware/Brave-Browser/Default/Extensions/
-!BraveSoftware/Brave-Browser/Default/Bookmarks
-!BraveSoftware/Brave-Browser/Default/Bookmarks.bak
+BraveSoftware/
+!**/Extensions/
+!**/Bookmarks
+!**/Bookmarks.bak
+# !BraveSoftware/**/**/Extensions/
+# !BraveSoftware/**/**/Bookmarks
+# !BraveSoftware/**/**/Bookmarks.bak
+# !BraveSoftware/Brave-Browser/Default/Extensions/
+# !BraveSoftware/Brave-Browser/Default/Bookmarks
+# !BraveSoftware/Brave-Browser/Default/Bookmarks.bak
 Slack/
 !Slack/Preferences
 !Slack/local-settings.json
