--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 BraveSoftware/
-!**/Extensions/
-!**/Bookmarks
-!**/Bookmarks.bak
-# !BraveSoftware/**/**/Extensions/
-# !BraveSoftware/**/**/Bookmarks
-# !BraveSoftware/**/**/Bookmarks.bak
+!BraveSoftware/**/**/Extensions/
+!BraveSoftware/**/**/Bookmarks
+!BraveSoftware/**/**/Bookmarks.bak
 # !BraveSoftware/Brave-Browser/Default/Extensions/
 # !BraveSoftware/Brave-Browser/Default/Bookmarks
 # !BraveSoftware/Brave-Browser/Default/Bookmarks.bak
