--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 BraveSoftware/
-!BraveSoftware/**/**/Extensions/
-!BraveSoftware/**/**/Bookmarks
-!BraveSoftware/**/**/Bookmarks.bak
+Extensions/
+Bookmarks
+Bookmarks.bak
 # !BraveSoftware/Brave-Browser/Default/Extensions/
 # !BraveSoftware/Brave-Browser/Default/Bookmarks
 # !BraveSoftware/Brave-Browser/Default/Bookmarks.bak
