--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-BraveSoftware/
-Extensions/
-Bookmarks
-Bookmarks.bak
-# !BraveSoftware/Brave-Browser/Default/Extensions/
-# !BraveSoftware/Brave-Browser/Default/Bookmarks
-# !BraveSoftware/Brave-Browser/Default/Bookmarks.bak
+!BraveSoftware/
+BraveSoftware/*
+!BraveSoftware/Brave-Browser/Default/Extensions/
+!BraveSoftware/Brave-Browser/Default/Bookmarks
+!BraveSoftware/Brave-Browser/Default/Bookmarks.bak
 Slack/
 !Slack/Preferences
 !Slack/local-settings.json
