--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-!BraveSoftware/
+!/BraveSoftware
 BraveSoftware/*
 !BraveSoftware/Brave-Browser/Default/Extensions/
 !BraveSoftware/Brave-Browser/Default/Bookmarks
