--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 !BraveSoftware/Brave-Browser/Default/Extensions/
 !BraveSoftware/Brave-Browser/Default/Bookmarks
 !BraveSoftware/Brave-Browser/Default/Bookmarks.bak
+!BraveSoftware/Brave-Browser/Default
 BraveSoftware/Brave-Browser/**
 Slack/
 !Slack/Preferences
