--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -52,15 +52,36 @@ conky.config = {
 }
 
 conky.text = [[
-${color grey} Navigate DWM:
-CMD + E = focus window right
-CMD + N = focus window left
-ALT + COMMA = focus screen left
-ALT + period = focus screen right
-alt + shift + comma = move window to left screen
-alt + shift + comma = move window to right screen
-CMD + number = jump to tag
-CMD + ALT + T = open alacritty
-CMd + ALT + W = open brave
-cmd + alt + R = open rofi
+${color grey} Navigate Focus:
+
+	${color grey} CMD + E = focus window right
+	${color grey} CMD + N = focus window left
+	${color grey} ALT + COMMA = focus screen left
+	${color grey} ALT + period = focus screen right
+	${color grey} CMD + number = jump to tag
+
+$hr
+
+${color grey} Move Windows:
+
+	${color grey} Alt + shift + comma = move window to left screen
+	${color grey} Alt + shift + comma = move window to right screen
+	${color grey} MOD + right mouse click = resize window
+	${color grey} MOD + left mouse click = move window
+
+$hr
+
+${color grey} Change Layout:
+
+	${color grey} MOD + t = tiling layout
+	${color grey} MOD + m = monocle layout
+	${color grey} MOD + f = floating layout
+
+$hr
+
+${color grey} Open Programs:
+
+	${color grey} CMD + ALT + T = open alacritty
+	${color grey} CMd + ALT + W = open brave
+	${color grey} cmd + alt + R = open rofi
 ]]
