--- a/Slack/local-settings.json
+++ b/Slack/local-settings.json
@@ -1,1 +1,1 @@
-{"lastElectronVersionLaunched":"12.0.2"}
+{"lastElectronVersionLaunched":"17.1.2","electronFeatureOverrides":[],"useHwAcceleration":true,"useTsLogBackend":false}
