Added slack keybind to conky config

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -84,4 +84,5 @@ ${color grey} Open Programs:
 	${color grey} CMD + ALT + T = open alacritty
 	${color grey} CMd + ALT + W = open brave
 	${color grey} cmd + alt + R = open rofi
+	${color grey} cmd + alt + S = open slack
 ]]
