--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -119,10 +119,10 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family:  FantasqueSansMono Nerd Font
+    family:  CaskaydiaCove Nerd Font
 
     # The `style` can be specified to pick a specific face.
-    style: Italic
+    style: Regular
 
   # Bold italic font face
   bold_italic:
@@ -130,10 +130,10 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family:  FantasqueSansMono Nerd Font
+    family:  CaskaydiaCove Nerd Font
 
     # The `style` can be specified to pick a specific face.
-    style: Bold Italic
+    style: Bold
 
   # Point size
     size: 10.0
