Added keybinds for kitty

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -85,4 +85,16 @@ ${color grey} Open Programs:
 	${color grey} CMd + ALT + W = open brave
 	${color grey} cmd + alt + R = open rofi
 	${color grey} cmd + alt + S = open slack
+
+$hr
+
+${color grey} Kitty Controls:
+
+	${color grey} CTRL + UP = page up
+	${color grey} CTRL + DOWN = page down
+	${color grey} CTRL + SHIFT + C = copy
+	${color grey} CTRL + SHIFT + V = paste
+	${color grey} CTRL + SHIFT + E = OPEN URL
+	${color grey} CTRL + SHIFT + UP = scroll up
+	${color grey} CTRL + SHIFT + DOWN = scroll down
 ]]
