--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -54,47 +54,51 @@ conky.config = {
 conky.text = [[
 ${color grey} Navigate Focus:
 
-	${color grey} CMD + E = focus window right
-	${color grey} CMD + N = focus window left
-	${color grey} ALT + COMMA = focus screen left
-	${color grey} ALT + period = focus screen right
-	${color grey} CMD + number = jump to tag
+	${color grey} focus window right = CMD + E
+	${color grey} focus window left = CMD + N
+	${color grey} focus screen left = ALT + COMMA
+	${color grey} focus screen right = ALT + period
+	${color grey} jump to tag = CMD + number
 
 $hr
 
 ${color grey} Move Windows:
 
-	${color grey} Alt + shift + comma = move window to left screen
-	${color grey} Alt + shift + comma = move window to right screen
-	${color grey} MOD + right mouse click = resize window
-	${color grey} MOD + left mouse click = move window
+	${color grey} move window to left screen = Alt + shift + comma
+	${color grey} move window to right screen = Alt + shift + comma
+	${color grey} resize window = MOD + right mouse click
+	${color grey} move window = MOD + left mouse click
 
 $hr
 
 ${color grey} Change Layout:
 
-	${color grey} MOD + t = tiling layout
-	${color grey} MOD + m = monocle layout
-	${color grey} MOD + f = floating layout
+	${color grey} tiling layout = MOD + t
+	${color grey} monocle layout = MOD + m
+	${color grey} floating layout = MOD + f
 
 $hr
 
 ${color grey} Open Programs:
 
-	${color grey} CMD + ALT + T = open alacritty
-	${color grey} CMd + ALT + W = open brave
-	${color grey} cmd + alt + R = open rofi
-	${color grey} cmd + alt + S = open slack
+	${color grey} open alacritty = CMD + ALT + T
+	${color grey} open brave = CMd + ALT + W
+	${color grey} open rofi = cmd + alt + R
+	${color grey} open slack = cmd + alt + S
 
 $hr
 
 ${color grey} Kitty Controls:
 
-	${color grey} CTRL + UP = page up
-	${color grey} CTRL + DOWN = page down
-	${color grey} CTRL + SHIFT + C = copy
-	${color grey} CTRL + SHIFT + V = paste
-	${color grey} CTRL + SHIFT + E = OPEN URL
-	${color grey} CTRL + SHIFT + UP = scroll up
-	${color grey} CTRL + SHIFT + DOWN = scroll down
+	${color grey} page up = CTRL + UP
+	${color grey} page down = CTRL + DOWN
+	${color grey} copy = CTRL + SHIFT + C
+	${color grey} paste = CTRL + SHIFT + V
+	${color grey} OPEN URL = CTRL + SHIFT + E
+	${color grey} scroll up = CTRL + SHIFT + UP
+	${color grey} scroll down = CTRL + SHIFT + DOWN
+	${color grey} next window = CTRL + SHIFT + o
+	${color grey} previous window = CTRL + SHIFT + h
+	${color grey} open new pane = CTRL + SHIFT + ENTER
+	${color grey} close current pane = CTRL + SHIFT + d
 ]]
