Added keybinds for kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,3 +10,7 @@ map kitty_mod+e open_url_with_hints
 map kitty_mod+d close_window
 map kitty_mod+l move_window_backward
 map kitty_mod+n move_window_forward
+map kitty_mod+o next_window
+map kitty_mod+h previous_window
+map kitty_mod+enter launch --cwd=current
+map kitty_mod+y new_window
