--- a/pcmanfm/default/pcmanfm.conf
+++ b/pcmanfm/default/pcmanfm.conf
@@ -17,7 +17,7 @@ desktop_folder_new_win=0
 change_tab_on_drop=1
 close_on_unmount=1
 focus_previous=0
-side_pane_mode=places
+side_pane_mode=dirtree
 view_mode=icon
 show_hidden=1
 sort=name;ascending;
