--- a/BraveSoftware/Brave-Browser/Default/Extensions/eimadpbcbfnmbkopoojfekhnkhdbieeh/4.9.51_0/config/dark-sites.config
+++ b/BraveSoftware/Brave-Browser/Default/Extensions/eimadpbcbfnmbkopoojfekhnkhdbieeh/4.9.51_0/config/dark-sites.config
@@ -85,6 +85,7 @@ azm.azerialabs.com
 badboybill.com
 batflix.org
 battle.net
+battlelog.battlefield.com
 bbaovanc.com
 bbc.co.uk/iplayer
 bdeditor.dev
@@ -100,12 +101,12 @@ bequiet.com
 bestblackhatforum.com
 beta.crunchyroll.com
 beta.destinyitemmanager.com
+betteranime.net
 betterdiscord.app
 betterttv.com
 bherila.net
 bin.disroot.org
 binclub.dev
-bing.com/$
 bip.staszic.waw.pl
 birdie0.github.io
 bitcoinity.org/markets
@@ -176,11 +177,13 @@ cl00e9ment.gitlab.io/kingdom-blazon-generator/
 clash3d.com
 clashofstats.com
 clt.gg
+cncnet.org
 codepen.io
 codesandbox.io
 codestackr.com
 codingame.com
 coinpot.co
+colean.cc
 comicextra.com
 comicpunch.net
 conficturaindustries.com
@@ -267,6 +270,7 @@ discourse.disneyheroesgame.com
 discuss.noisebridge.info
 disneyplus.com
 distrotube.com
+djflame.tech
 dlive.tv
 dodi-repacks.site
 doesitarm.com
@@ -344,6 +348,7 @@ florr.io
 fluxpoint.dev
 flyordie.io
 fmovies.to
+food-le.co
 fortnite-api.com
 forum.cswarzone.com
 forum.lastos.org
@@ -363,6 +368,7 @@ fusengine.github.io/apaxy-v2
 gamebanana.com
 gamejolt.com
 gameloop.fun
+gaming.amazon.com
 garamlee500.github.io
 garudalinux.org
 gatsbyjs.org
@@ -386,6 +392,7 @@ ghidra-sre.org
 ghostpgp.com
 giantbomb.com
 gibber.cc
+gibbu.github.io/ThemePreview/
 gifrun.com
 gifyourgame.com
 giggl.app
@@ -444,6 +451,7 @@ herodamage.com
 hexiro.me
 hidive.com
 himovies.to
+hiserod.github.io
 hiveos.farm
 hoarding.me
 hostedtalk.net
@@ -492,6 +500,7 @@ jakubkaczor.github.io
 jbzd.com.pl
 jekyllrb.com
 jellymar.io
+jeusto.com
 jhey.dev
 jigsawpuzzles.io
 jmoore.dev
@@ -506,6 +515,8 @@ json-diff.com
 justfive.news
 kadantiscam.netlify.app
 kaoskrew.org
+kbh.games
+kbhgames.com
 keezersquest.nl
 kfocus.org
 killabee-gaming.com
@@ -535,6 +546,7 @@ leakth.is
 lecantiche.com
 lemmi.no
 letterboxd.com
+libreboot.org
 lightweightpdf.com
 limeshark.dev/editor
 link.brawlstars.com/invite
@@ -544,9 +556,8 @@ lipu-linku.github.io
 liquidplus.com
 listen.moe
 livesplit.org
+loadout.tf
 lolesports.com
-lollilol.cf
-lollilol.ml
 lollilol.xyz
 lookmovie.ag
 looskie.com
@@ -568,6 +579,7 @@ mangaplus.shueisha.co.jp
 mango.pdf.zone
 maroon.jonah.pw
 marte.dev
+mastercomfig.com
 mastodon.online
 mastodon.social
 matteotiscia.com
@@ -706,6 +718,12 @@ pic.cleoold.com
 pic8.co
 ping.pe
 piped.kavin.rocks
+piped.mha.fi
+piped.mint.lgbt
+piped.moomoo.me
+piped.privacy.com.de
+piped.silkky.cloud
+piped.tokhmi.xyz
 piracybank.org
 piskelapp.com
 pitokmm.it
@@ -752,6 +770,7 @@ proxy.vulpes.one
 psi.cynicaloptimist.me
 psyoptions.io
 ptt.cc
+pussthecat.org
 pxseu.com
 pylon.bot
 qbraid.com
@@ -864,6 +883,7 @@ slider.kz
 slippi.gg
 slither.io
 snazzah.com
+somafm.com
 spacebattles.com
 spacestationgaming.com
 spark.lucko.me
@@ -881,6 +901,7 @@ staszic.waw.pl
 statbot.net
 stateofjs.com
 steam.tv
+steamcharts.com
 steamchina.com
 steamcommunity.com
 steamdb.info
@@ -904,8 +925,10 @@ support.steampowered.com
 supremacy1914.com
 surviv.io
 svtplay.se
+sync-tube.de
 szmarczak.com
 t.maisputain.ovh
+tabstats.com
 tacoanon.github.io
 takethewalk.net
 talentbrick.com
@@ -922,6 +945,7 @@ telecineplay.com.br
 teleseer.com
 televizeseznam.cz
 telugucz.com
+term.ooo
 terminal.sexy
 tetr.io
 textfiles.com
@@ -946,9 +970,12 @@ tinyzonetv.to
 tio.run
 title-case-converter.vercel.app
 tmtheme-editor.herokuapp.com
+tommytran.io
 toneden.io
+top.gg
 totalwarwarhammer.gamepedia.com
 tracker.fumik0.com
+tracker.gg
 tracr.co
 training.azeria-labs.com
 trblwlf.tk
@@ -986,7 +1013,6 @@ v3rmillion.net
 v7player.wostreaming.net
 v8.dev
 vakhtangov.ru
-valh.io
 valvestore.forfansbyfans.com
 vancedapp.com
 vanillatweaks.net
@@ -1040,9 +1066,11 @@ wowaudit.com
 wowhead.com
 wowinterface.com
 wtfast.com
+www.ageofempires.com
 www.canalplus.com
 www.cc.com
 www.chiefdelphi.com
+www.deviantart.com
 www.digikam.org
 www.directvnow.com
 www.gotimelinr.com
@@ -1059,6 +1087,7 @@ x64dbg.com
 xbins.org
 xdox.me
 xela.dev
+xerolinux.xyz
 xn--rpa.cc
 xonotic.org
 yande.re
@@ -1077,3 +1106,4 @@ zombsroyale.io
 zoomquilt.org
 zoomquilt2.com
 ztdp.ca
+zunivers.zerator.com
