--- a/MacOS/kitty/kitty.conf
+++ b/MacOS/kitty/kitty.conf
@@ -4,8 +4,8 @@ cursor_blink_interval 0
 enable_audio_bell no
 background_opacity 0.6
 kitty_mod ctrl+shift
-map ctrl+up scroll_page_up
-map ctrl+down scroll_page_down
+map ctrl+k scroll_page_up
+map ctrl+j scroll_page_down
 map kitty_mod+e open_url_with_hints
 map kitty_mod+d close_window
 map kitty_mod+l move_window_backward
