--- a/MacOS/kitty/kitty.conf
+++ b/MacOS/kitty/kitty.conf
@@ -1,16 +1,26 @@
-font_family      CaskaydiaCove Nerd Font Mono
-font_size 22.0
+font_family      Fira Code
+font_size 26.0
 cursor_blink_interval 0
 enable_audio_bell no
-background_opacity 0.6
+background_opacity 0.5
+hide_window_decorations yes
+confirm_os_window_close 0
+window_margin_width 0
+single_window_margin_width 0
+window_border_width 0
+window_padding_width 0
+macos_quit_when_last_window_closed yes
+macos_traditional_fullscreen yes
+remember_window_size  yes
+initial_window_width  1791
+initial_window_height 1119
 kitty_mod ctrl+shift
 map ctrl+k scroll_page_up
 map ctrl+j scroll_page_down
 map kitty_mod+e open_url_with_hints
 map kitty_mod+d close_window
-map kitty_mod+l move_window_backward
+map kitty_mod+p move_window_backward
 map kitty_mod+n move_window_forward
-map kitty_mod+o next_window
-map kitty_mod+h previous_window
+map kitty_mod+h next_window
+map kitty_mod+l previous_window
 map kitty_mod+enter launch --cwd=current
-map kitty_mod+y new_window
