finished modifying readme instructions

--- a/MacOS/.gitignore
+++ b/MacOS/.gitignore
@@ -1,15 +1,6 @@
-BraveSoftware/Brave-Browser/*
-!BraveSoftware/Brave-Browser/Default
-BraveSoftware/Brave-Browser/Default/*
-!BraveSoftware/Brave-Browser/Default/Extensions/
-!BraveSoftware/Brave-Browser/Default/Bookmarks
-!BraveSoftware/Brave-Browser/Default/Bookmarks.bak
-Slack/*
-!Slack/Preferences
-!Slack/local-settings.json
-!Slack/Preferences.bak
-!Slack/local-settings.json.bak
-qtile/__pycache__/
-ranger/__pycache__/
-nvim/autoload/plugged/vim-dadbod-ui/
-nvim/autoload/plugged/vim-dadbod/
+/kitty
+/nvim
+/MacOS/nvim/autoload/plugged
+/Linux/nvim/autoload/plugged
+configstore
+.DS_Store
