--- a/MacOS/kitty/kitty.conf
+++ b/MacOS/kitty/kitty.conf
@@ -2,7 +2,7 @@ font_family      Fira Code
 font_size 26.0
 cursor_blink_interval 0
 enable_audio_bell no
-background_opacity 0.5
+background_opacity 0.6
 hide_window_decorations yes
 confirm_os_window_close 0
 window_margin_width 0
@@ -20,7 +20,8 @@ map ctrl+j scroll_page_down
 map kitty_mod+e open_url_with_hints
 map kitty_mod+d close_window
 map kitty_mod+p move_window_backward
-map kitty_mod+n move_window_forward
+map kitty_mod+m move_window_forward
 map kitty_mod+h next_window
 map kitty_mod+l previous_window
 map kitty_mod+enter launch --cwd=current
+map kitty_mod+n launch
