--- a/MacOS/kitty/kitty.conf
+++ b/MacOS/kitty/kitty.conf
@@ -3,7 +3,7 @@ font_size 26.0
 cursor_blink_interval 0
 enable_audio_bell no
 background_opacity 0.8
-hide_window_decorations yes
+hide_window_decorations no
 confirm_os_window_close 0
 window_margin_width 0
 single_window_margin_width 0
