--- a/MacOS/kitty/kitty.conf
+++ b/MacOS/kitty/kitty.conf
@@ -14,14 +14,12 @@ macos_traditional_fullscreen yes
 remember_window_size  yes
 initial_window_width  1791
 initial_window_height 1119
-kitty_mod ctrl+shift
-map ctrl+k scroll_page_up
-map ctrl+j scroll_page_down
+kitty_mod cmd+shift
+map kitty_mod+u scroll_page_up
+map kitty_mod+y scroll_page_down
 map kitty_mod+e open_url_with_hints
 map kitty_mod+d close_window
-map kitty_mod+p move_window_backward
-map kitty_mod+m move_window_forward
-map kitty_mod+h next_window
-map kitty_mod+l previous_window
-map kitty_mod+enter launch --cwd=current
-map kitty_mod+n launch
+map kitty_mod+k previous_tab
+map kitty_mod+h next_tab
+map kitty_mod+enter launch --type=tab --cwd=current
+map kitty_mod+n new_tab
