--- a/Linux/Slack/local-settings.json
+++ b/Linux/Slack/local-settings.json
@@ -1,1 +1,1 @@
-{"lastElectronVersionLaunched":"19.0.3","electronFeatureOverrides":[],"useHwAcceleration":true,"useTsLogBackend":false,"lastEffectiveClientEnvironment":1000}
+{"lastEffectiveClientEnvironment":1000,"lastElectronVersionLaunched":"30.0.0","electronFeatureOverrides":[]}
