--- a/Linux/kitty/kitty.conf
+++ b/Linux/kitty/kitty.conf
@@ -1,16 +1,21 @@
-font_family      CaskaydiaCove Nerd Font Mono
+font_family CaskaydiaCove NF Regular
 font_size 22.0
 cursor_blink_interval 0
 enable_audio_bell no
-background_opacity 0.6
-kitty_mod ctrl+shift
-map ctrl+up scroll_page_up
-map ctrl+down scroll_page_down
+background_opacity 0.8
+hide_window_decorations yes
+confirm_os_window_close 0
+window_margin_width 0
+single_window_margin_width 0
+window_border_width 0
+window_padding_width 0
+remember_window_size  yes
+kitty_mod alt+shift
+map kitty_mod+u scroll_page_up
+map kitty_mod+y scroll_page_down
 map kitty_mod+e open_url_with_hints
 map kitty_mod+d close_window
-map kitty_mod+l move_window_backward
-map kitty_mod+n move_window_forward
-map kitty_mod+o next_window
-map kitty_mod+h previous_window
-map kitty_mod+enter launch --cwd=current
-map kitty_mod+y new_window
+map kitty_mod+k previous_tab
+map kitty_mod+h next_tab
+map kitty_mod+enter launch --type=tab --cwd=current
+map kitty_mod+t new_tab
