--- a/Linux/haruna/haruna.conf
+++ b/Linux/haruna/haruna.conf
@@ -3,4 +3,4 @@ Volume=85
 VolumeStep=75
 
 [General]
-LastPlayedFile=file:///home/jordan/Videos/Screencasts/Screencast_2024-05-23_14:19:37.webm
+LastPlayedFile=file:///home/jordan/Downloads/Data Quality Videos/5 - DEND C04 L04 A22 Data Partitioning.mp4
