--- a/Linux/kde.org/UserFeedback.org.kde.plasmashell.conf
+++ b/Linux/kde.org/UserFeedback.org.kde.plasmashell.conf
@@ -26,5 +26,5 @@ dataSourceCommonSettings\activeState=true
 dataSourceCommonSettings\activeState=true
 
 [UserFeedback]
-ApplicationStartCount=53
-ApplicationTime=553561
+ApplicationStartCount=60
+ApplicationTime=1025361
