--- a/Linux/kwinoutputconfig.json
+++ b/Linux/kwinoutputconfig.json
@@ -6,8 +6,8 @@
                 "connectorName": "eDP-1",
                 "edidHash": "65485859493ef32668133d2dacd847e8",
                 "edidIdentifier": "SDC 16768 0 27 2021 0",
-                "highDynamicRange": false,
-                "iccProfilePath": "",
+                "highDynamicRange": true,
+                "iccProfilePath": "/home/jordan/Documents/ATNA56YX03_0_10-04-2023.icm",
                 "mode": {
                     "height": 1080,
                     "refreshRate": 120002,
@@ -16,11 +16,11 @@
                 "overscan": 0,
                 "rgbRange": "Automatic",
                 "scale": 1,
-                "sdrBrightness": 200,
-                "sdrGamutWideness": 0,
+                "sdrBrightness": 250,
+                "sdrGamutWideness": 0.55,
                 "transform": "Normal",
                 "vrrPolicy": "Automatic",
-                "wideColorGamut": false
+                "wideColorGamut": true
             },
             {
                 "autoRotation": "InTabletMode",
