Updated yay config to never show the diff

--- a/Linux/QtProject.conf
+++ b/Linux/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
 history=@Invalid()
-lastVisited=file:///home/jordan/
+lastVisited=file:///home/jordan/Pictures/Screenshots/
 qtVersion=6.7.1
 shortcuts=file:, file:///home/jordan
 sidebarWidth=95
