--- a/Linux/Slack/local-settings.json
+++ b/Linux/Slack/local-settings.json
@@ -1,1 +1,1 @@
-{"lastEffectiveClientEnvironment":1000,"lastElectronVersionLaunched":"30.0.6","electronFeatureOverrides":[{"experiment":"","disable_chrome_features":["PostQuantumKyber"],"type":"normal"}]}
+{"lastEffectiveClientEnvironment":1000,"lastElectronVersionLaunched":"30.0.6","electronFeatureOverrides":[{"experiment":"","disable_chrome_features":["PostQuantumKyber"],"type":"normal"},{"experiment":"","disable_chrome_features":["MediaRecorderEnableMp4Muxer"],"type":"normal"}]}
