--- a/Linux/yay/config.json
+++ b/Linux/yay/config.json
@@ -11,7 +11,7 @@
 	"redownload": "no",
 	"rebuild": "no",
 	"answerclean": "A",
-	"answerdiff": "",
+	"answerdiff": "N",
 	"answeredit": "",
 	"answerupgrade": "",
 	"gitbin": "git",
