Modified kitty keybinds

--- a/Linux/kitty/kitty.conf
+++ b/Linux/kitty/kitty.conf
@@ -10,12 +10,11 @@ single_window_margin_width 0
 window_border_width 0
 window_padding_width 0
 remember_window_size  yes
-kitty_mod alt+shift
+kitty_mod alt+shift+ctrl
 map kitty_mod+u scroll_page_up
 map kitty_mod+y scroll_page_down
 map kitty_mod+e open_url_with_hints
-map kitty_mod+d close_window
-map kitty_mod+k previous_tab
-map kitty_mod+h next_tab
+map kitty_mod+c previous_tab
+map kitty_mod+d next_tab
 map kitty_mod+enter launch --type=tab --cwd=current
 map kitty_mod+t new_tab
