New previous tab keybind

--- a/Linux/kitty/kitty.conf
+++ b/Linux/kitty/kitty.conf
@@ -14,7 +14,7 @@ kitty_mod alt+shift+ctrl
 map kitty_mod+u scroll_page_up
 map kitty_mod+y scroll_page_down
 map kitty_mod+e open_url_with_hints
-map kitty_mod+c previous_tab
+map kitty_mod+z previous_tab
 map kitty_mod+d next_tab
 map kitty_mod+enter launch --type=tab --cwd=current
 map kitty_mod+t new_tab
