New kitty keybinding

--- a/Linux/kitty/kitty.conf
+++ b/Linux/kitty/kitty.conf
@@ -18,4 +18,4 @@ map kitty_mod+z previous_tab
 map kitty_mod+d next_tab
 map kitty_mod+enter launch --type=tab --cwd=current
 map kitty_mod+t new_tab
-map kitty_mod+x close_tab
+map kitty_mod+q close_tab
