--- a/Linux/obs-studio/basic/profiles/Untitled/basic.ini
+++ b/Linux/obs-studio/basic/profiles/Untitled/basic.ini
@@ -83,9 +83,9 @@ FFAEncoder=
 FFExtension=mp4
 
 [Video]
-BaseCX=1920
+BaseCX=2560
 BaseCY=1080
-OutputCX=1920
+OutputCX=2560
 OutputCY=1080
 FPSType=0
 FPSCommon=60
@@ -100,8 +100,8 @@ SdrWhiteLevel=300
 HdrNominalPeakLevel=1000
 
 [Audio]
-MonitoringDeviceId=default
-MonitoringDeviceName=Default
+MonitoringDeviceId=alsa_output.usb-K66_K66_20190805V001-00.analog-stereo
+MonitoringDeviceName=K66 Analog Stereo
 SampleRate=48000
 ChannelSetup=Stereo
 MeterDecayRate=23.53
