--- a/Linux/ghostty/config
+++ b/Linux/ghostty/config
@@ -1285,6 +1285,8 @@ working-directory =
 # Ghostty will attempt to request these permissions. If the permissions are
 # not granted, the keybind will not work. On macOS, you can find these
 # permissions in System Preferences -> Privacy & Security -> Accessibility.
+## Clear all keybindings
+keybind=clear
 keybind = super+a=select_all
 keybind = super+c=copy_to_clipboard
 keybind = super+o=new_tab
@@ -1292,8 +1294,8 @@ keybind = super+v=paste_from_clipboard
 keybind = super+,=reload_config
 keybind = super+e=next_tab
 keybind = super+n=previous_tab
-keybind = super+j=jump_to_prompt:-1
-keybind = super+l=jump_to_prompt:1
+keybind = super+k=jump_to_prompt:-1
+keybind = super+j=jump_to_prompt:1
 keybind = super+up=scroll_page_up
 keybind = super+down=scroll_page_down
 keybind = super+one=goto_tab:1
