Ignore everything in discord except for settings.json

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ MacOS/Slack/*
 !MacOS/Slack/local-settings.json
 !MacOS/Slack/Preferences
 !Linux/
+Linux/discord/*
+!Linux/discord/settings.json
 Linux/Docker Desktop/
 Linux/nvim/autoload/plug.vim.old
 Linux/BraveSoftware/
