--- a/Linux/obs-studio/global.ini
+++ b/Linux/obs-studio/global.ini
@@ -11,8 +11,9 @@ ConfirmOnExit=true
 HotkeyFocusType=NeverDisableHotkeys
 FirstRun=true
 CurrentTheme3=Acri
-LastVersion=520093699
+LastVersion=520159233
 Pre31Migrated=true
+BrowserHWAccel=true
 
 [Video]
 Renderer=OpenGL
