--- a/Linux/strawberry/strawberry.conf
+++ b/Linux/strawberry/strawberry.conf
@@ -193,7 +193,7 @@ providers=Lyrics.ovh, LoloLyrics, Musixmatch, songlyrics.com, azlyrics.com, elyr
 current_tab=0
 do_not_show_sponsor_message=true
 file_path=/home/jordan
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\n\0\0\0\0\0\0\0\xe}\0\0\a\xce\0\0\n\0\0\0\0\0\0\0\xe}\0\0\a\xce\0\0\0\0\0\0\0\0\x4\x80\0\0\n\0\0\0\0\0\0\0\xe}\0\0\a\xce)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\x1\xe4\0\0\x4}\0\0\x5\xea\0\0\0\0\0\0\x1\xe4\0\0\x4}\0\0\x5\xea\0\0\0\x1\0\0\0\0\n\0\0\0\0\0\0\0\x1\xe4\0\0\x4}\0\0\x5\xea)
 hidden=false
 maximized=false
 minimized=false
@@ -250,7 +250,7 @@ popup_screen=DVI-I-1
 
 [Player]
 playback_playlist=1
-playback_position=375
+playback_position=112
 playback_state=3
 volume=100
 
@@ -263,6 +263,7 @@ alternating_row_colors=true
 auto_sort=false
 column_alignments=@Variant(\0\0\0\x7f\0\0\0\x13\x43olumnAlignmentMap\0\0\0\0\v\0\0\0\x6\0\0\0\x82\0\0\0\a\0\0\0\x82\0\0\0\b\0\0\0\x82\0\0\0\t\0\0\0\x82\0\0\0\n\0\0\0\x82\0\0\0\f\0\0\0\x82\0\0\0\r\0\0\0\x82\0\0\0\xe\0\0\0\x82\0\0\0\x11\0\0\0\x82\0\0\0\x15\0\0\0\x82\0\0\0\x16\0\0\0\x82)
 continue_on_error=false
+current_playlist=1
 delete_files=false
 editmetadatainline=false
 glow_effect=true
@@ -280,7 +281,7 @@ warn_close_playlist=true
 write_metadata=false
 
 [PlaylistSequence]
-repeat_mode=0
+repeat_mode=3
 shuffle_mode=1
 
 [Qobuz]
